# EdgeLightingEffect

./: CMakeLists.txt  README.md
assets/shaders/: line.frag  line.vert  particle.frag  particle.vert
docs/: index.html
docs/css/: style.css
docs/js/: main.js
include/EdgeLightingEffect/: AudioReactiveEdgeLightingEffect.h  EdgeLightingEffect.h  EdgePulseEffect.h  Effect.h  EffectManager.h  EnergyStreamEffect.h  MagneticRectangleEffect.h  MagneticWaveEffect.h  NeonWaveRingEffect.h
src/: CMakeLists.txt  EffectManager.cpp  main.cpp
src/core/: Application.cpp  Application.h  Shader.cpp  Shader.h
src/effects/: AudioReactiveEdgeLightingEffect.cpp  EdgeLightingEffect.cpp  EdgeLightingEffect.h  EdgePulseEffect.cpp  EnergyStreamEffect.cpp  MagneticRectangleEffect.cpp  MagneticWaveEffect.cpp  NeonWaveRingEffect.cpp
src/perimeter/: Perimeter.cpp  Perimeter.h
